crates/lex-babel/tests/html/snapshots/lib__html__export__kitchensink.snap
---
source: crates/lex-babel/tests/html/export.rs
assertion_line: 831
expression: snapshot_without_styles(&html)
---
<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta name="generator" content="lex-babel">
  <title>Kitchensink Test Document: A Comprehensive Regression Test {{paragraph}}</title>
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/github.min.css">
  <style data-lex-snapshot="removed"></style>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
  <script>hljs.highlightAll();</script>
</head>
<body>
<div class="lex-document">
<header class="lex-doc-header"><h1 class="lex-doc-title">Kitchensink Test Document</h1><p class="lex-doc-subtitle">A Comprehensive Regression Test {{paragraph}}</p></header>
<p class="lex-paragraph">This document includes <strong>all major features</strong> of the lex language to serve as a comprehensive "kitchensink" regression test for the parser, as noted in <a href="#ref-spec2025, pp. 45-46">@spec2025, pp. 45-46</a>. {{paragraph}}</p><p class="lex-paragraph">This is a two-lined paragraph.
First, a simple <em>definition</em> at the root level. {{paragraph}}</p><dl class="lex-definition"><dt>Root Definition</dt><dd><p>This definition contains a paragraph and a <code>list</code> to test mixed content at the top level. {{definition}}</p><ul class="lex-list"><li class="lex-list-item">Item 1 in definition referencing <a href="TK-rootlist">TK-rootlist</a>. {{list-item}}
</li><li class="lex-list-item">Item 2 in definition with note <a href="42">42</a>. {{list-item}}
</li></ul></dd></dl><p class="lex-paragraph">This is a marker annotation at the root level, attached to the definition above.</p><section class="lex-session lex-session-2"><h2>1. Primary Session {{session}}</h2><p class="lex-paragraph">This session acts as the main container for testing nested structures. It starts with a simple paragraph. {{paragraph}}</p><!-- lex:warning severity=high --><p class="lex-paragraph"> This is a single-line annotation inside the session.</p><!-- /lex:warning --><ul class="lex-list"><li class="lex-list-item">Followed by a simple list. {{list-item}}
</li><li class="lex-list-item">This list has two items. {{list-item}}
</li></ul><section class="lex-session lex-session-3"><h3>1.1. Nested Session (Level 2) {{session}}</h3><p class="lex-paragraph">This is a second-level session containing a definition and a list with nested content. {{paragraph}}</p><dl class="lex-definition"><dt>Nested Definition</dt><dd><p>This definition is inside a nested session and contains a list. {{definition}}</p><ul class="lex-list"><li class="lex-list-item">List inside a nested definition. {{list-item}}
</li><li class="lex-list-item">Second item. {{list-item}}
</li></ul></dd></dl><ul class="lex-list"><li class="lex-list-item">A list item at level 2. {{list-item}}
<div class="lex-content"><p class="lex-paragraph">This list item contains a nested paragraph. {{paragraph}}</p><ul class="lex-list"><li class="lex-list-item">And a nested list (Level 3). {{list-item}}
</li><li class="lex-list-item">With its own items. {{list-item}}
</li></ul></div></li><li class="lex-list-item">Another list item at level 2. {{list-item}}
</li></ul></section><p class="lex-paragraph">A paragraph back at the first level of nesting. {{paragraph}}</p><div class="lex-verbatim-subject">Code Example (Verbatim Block)</div><pre class="lex-verbatim" data-language="javascript"><code class="language-javascript">// This is a verbatim block with code.
function example() {
    return "lex";
}</code></pre></section><section class="lex-session lex-session-2"><h2>2. Second Root Session {{session}}</h2><p class="lex-paragraph">This session tests annotations with block content and marker-style verbatim blocks. {{paragraph}}</p><!-- lex:todo status="open" assignee="team" --><p class="lex-paragraph">This is a block annotation. {{paragraph}}</p><p class="lex-paragraph">It contains a paragraph and a list. {{paragraph}}</p><ul class="lex-list"><li class="lex-list-item">Task 1 to complete. {{list-item}}
</li><li class="lex-list-item">Task 2 to complete. {{list-item}}
</li></ul><!-- /lex:todo --><figure class="lex-image"><img src="&quot;logo.png&quot;" alt="&quot;Lex Logo&quot;" title="Image Reference (Marker Verbatim Block)"><figcaption>"Lex Logo"</figcaption></figure></section><p class="lex-paragraph">Final paragraph at the end of the document. {{paragraph}}</p>
</div>
</body>
</html>
