crates/lex-babel/tests/html/snapshots/lib__html__export__trifecta_010_paragraphs_sessions_flat_single.snap
---
source: crates/lex-babel/tests/html/export.rs
expression: snapshot_without_styles(&html)
---
<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta name="generator" content="lex-babel">
  <title>Paragraphs and Single Session Test {{paragraph}}</title>
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/github.min.css">
  <style data-lex-snapshot="removed"></style>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
  <script>hljs.highlightAll();</script>
</head>
<body>
<div class="lex-document">
<header class="lex-doc-header"><h1 class="lex-doc-title">Paragraphs and Single Session Test {{paragraph}}</h1></header>
<p class="lex-paragraph">This document tests the combination of paragraphs and a single session at the root level. {{paragraph}}</p><section class="lex-session lex-session-2"><h2>1. Introduction {{session-title}}</h2><div class="lex-content"><p class="lex-paragraph">This is the content of the session. It contains a paragraph that is indented relative to the session title. {{paragraph}}</p><p class="lex-paragraph">The session can contain multiple paragraphs as long as they are properly indented. {{paragraph}}</p></div></section><p class="lex-paragraph">This paragraph comes after the session and is at the root level. {{paragraph}}</p><section class="lex-session lex-session-2"><h2>Another Session {{session-title}}</h2><div class="lex-content"><p class="lex-paragraph">This session demonstrates that we can have multiple sessions at the same level. {{paragraph}}</p></div></section><p class="lex-paragraph">Final paragraph at the root level. {{paragraph}}</p>
</div>
</body>
</html>
