crates/lex-babel/tests/html/snapshots/lib__html__export__trifecta_020_paragraphs_sessions_flat_multiple.snap
---
source: crates/lex-babel/tests/html/export.rs
assertion_line: 375
expression: snapshot_without_styles(&html)
---
<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta name="generator" content="lex-babel">
  <title>Multiple Sessions Flat Test {{paragraph}}</title>
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/github.min.css">
  <style data-lex-snapshot="removed"></style>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
  <script>hljs.highlightAll();</script>
</head>
<body>
<div class="lex-document">
<header class="lex-doc-header"><h1 class="lex-doc-title">Multiple Sessions Flat Test {{paragraph}}</h1></header>
<p class="lex-paragraph">This document tests multiple sessions at the root level with paragraphs between them. {{paragraph}}</p><section class="lex-session lex-session-2"><h2>1. First Session {{session-title}}</h2><p class="lex-paragraph">This is the content of the first session. {{paragraph}}</p><p class="lex-paragraph">It can have multiple paragraphs. {{paragraph}}</p></section><section class="lex-session lex-session-2"><h2>2. Second Session {{session-title}}</h2><p class="lex-paragraph">The second session also has content. {{paragraph}}</p></section><p class="lex-paragraph">A paragraph between sessions. {{paragraph}}</p><section class="lex-session lex-session-2"><h2>3. Third Session {{session-title}}</h2><p class="lex-paragraph">Sessions can have different amounts of content. {{paragraph}}</p></section><p class="lex-paragraph">Another paragraph. {{paragraph}}</p><section class="lex-session lex-session-2"><h2>4. Session Without Numbering {{session-title}}</h2><section class="lex-session lex-session-3"><h3>Session titles don't require numbering markers. {{session-title}}</h3><p class="lex-paragraph">They just need to be followed by a blank line and indented content. {{paragraph}}</p></section></section><p class="lex-paragraph">Final paragraph at the root level. {{paragraph}}</p>
</div>
</body>
</html>
