crates/lex-babel/tests/html/snapshots/lib__html__export__trifecta_060_nesting.snap
---
source: crates/lex-babel/tests/html/export.rs
assertion_line: 390
expression: snapshot_without_styles(&html)
---
<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta name="generator" content="lex-babel">
  <title>Trifecta Nesting Test {{paragraph}}</title>
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/github.min.css" integrity="sha384-eFTL69TLRZTkNfYZOLM+G04821K1qZao/4QLJbet1pP4tcF+fdXq/9CdqAbWRl/L" crossorigin="anonymous">
  <style data-lex-snapshot="removed"></style>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js" integrity="sha384-RH2xi4eIQ/gjtbs9fUXM68sLSi99C7ZWBRX1vDrVv6GQXRibxXLbwO2NGZB74MbU" crossorigin="anonymous"></script>
  <script>hljs.highlightAll();</script>
</head>
<body>
<div class="lex-document">
<header class="lex-doc-header"><h1 class="lex-doc-title">Trifecta Nesting Test {{paragraph}}</h1></header>
<p class="lex-paragraph">This document tests the combination of all three core elements (sessions, paragraphs, lists) with various levels of nesting. {{paragraph}}</p><section class="lex-session lex-session-2"><h2>1. Root Session {{session-title}}</h2><p class="lex-paragraph">This root session contains various nested elements. {{paragraph}}</p><section class="lex-session lex-session-3"><h3>1.1. Sub-session with Paragraph {{session-title}}</h3><p class="lex-paragraph">This sub-session starts with a paragraph. {{paragraph}}</p><ul class="lex-list"><li class="lex-list-item">Then has a list {{list-item}}
</li><li class="lex-list-item">With multiple items {{list-item}}
</li></ul></section><section class="lex-session lex-session-3"><h3>1.2. Sub-session with List {{session-title}}</h3><ul class="lex-list"><li class="lex-list-item">Starts with a list {{list-item}}
</li><li class="lex-list-item">Has multiple items {{list-item}}
</li></ul><p class="lex-paragraph">Then has a paragraph. {{paragraph}}</p><section class="lex-session lex-session-4"><h4>1.2.1. Deeply Nested Session {{session-title}}</h4><p class="lex-paragraph">This is a deeply nested session. {{paragraph}}</p><ul class="lex-list"><li class="lex-list-item">With its own list {{list-item}}
</li><li class="lex-list-item">And multiple items {{list-item}}
</li></ul><ul class="lex-list"><li class="lex-list-item">Another list follows {{list-item}}
</li><li class="lex-list-item">In the same session {{list-item}}
</li></ul></section></section><p class="lex-paragraph">Back to the root session level. {{paragraph}}</p><ul class="lex-list"><li class="lex-list-item">Root session can also have lists {{list-item}}
</li><li class="lex-list-item">At its own level {{list-item}}
</li></ul></section><section class="lex-session lex-session-2"><h2>2. Another Root Session {{session-title}}</h2><p class="lex-paragraph">This session demonstrates different nesting patterns. {{paragraph}}</p><section class="lex-session lex-session-3"><h3>2.1. Mixed Content Sub-session {{session-title}}</h3><ul class="lex-list"><li class="lex-list-item">Starts with list {{list-item}}
</li><li class="lex-list-item">Multiple items {{list-item}}
</li></ul><p class="lex-paragraph">Paragraph in the middle. {{paragraph}}</p><ul class="lex-list"><li class="lex-list-item">Ends with another list {{list-item}}
</li><li class="lex-list-item">To complete the pattern {{list-item}}
</li></ul><section class="lex-session lex-session-4"><h4>2.1.1. Even Deeper Nesting {{session-title}}</h4><p class="lex-paragraph">The deepest level contains paragraphs and lists. {{paragraph}}</p><ul class="lex-list"><li class="lex-list-item">First deep list {{list-item}}
</li><li class="lex-list-item">Second deep item {{list-item}}
</li></ul><p class="lex-paragraph">Another paragraph at deep level. {{paragraph}}</p><ul class="lex-list"><li class="lex-list-item">Second deep list {{list-item}}
</li><li class="lex-list-item">Completing the deep structure {{list-item}}
</li></ul></section></section></section><p class="lex-paragraph">Final root level paragraph. {{paragraph}}</p>
</div>
</body>
</html>
